--- a/prov.ansible/playbook.yml
+++ b/prov.ansible/playbook.yml
@@ -2,18 +2,11 @@
 - hosts: all
   sudo: true
   tasks:
-  - name: add repository nodejs
-    apt_repository: repo='ppa:chris-lea/node.js'
-
   - name: update repository
     apt: update_cache=yes
 
   - name: install nodejs
-    apt: pkg=nodejs update_cache=true
-
-  - name: install npm
-    apt: pkg=npm update_cache=true
-
+    apt: pkg=nodejs state=installed  update_cache=yes
 
   - name: install express
     command: npm install -g express
